# teamtalk-server

./: .gitignore  deploy.md  readme.md
auto/: setup.sh  setup_mysql.sh
auto/conf/: dbproxyserver.conf  fileserver.conf  httpmsgserver.conf  loginserver.conf  msfs.conf  msgserver.conf  pushserver.conf  routeserver.conf  ttopen.sql
auto_setup/: README.md  配置文件.md
auto_setup/im_server/: setup.sh
auto_setup/im_server/conf/: dbproxyserver.conf  fileserver.conf  httpmsgserver.conf  loginserver.conf  msgserver.conf
auto_setup/mysql_build/: setup.sh
doc/: #数据库设计.md  0.数据库设计.md  1.架构分析.md  1.项目部署.md  10.数据库代理服务器与消息服务器设计.md  11.服务器性测试.md  12.ETCD服务发现.md  2.架构分析.md  2.通讯协议设计.md  3.reactor模型.md  3.数据库设计.md  4.1.base目录解析1.md  4.2.base目录解析2.md  4.3.base目录解析3.md  4.登录服务器与消息服务器设计1.md  4.通讯协议设计.md  5.reactor模型.md  5.关键业务流程分析.md  5.各服务器业务交互流程.md  5.登录服务器与消息服务器设计.md  5.登录服务器与消息服务器设计2.md  6.base目录解析.md  6.路由服务器与消息服务器设计.md  7.关键业务流程分析.md  7.数据库代理服务器与消息服务器设计.md  8.数据库代理服务器与消息服务器设计.md  8.文件服务器与消息服务器设计.md  8.登录服务器与消息服务器设计.md  HTTP接口定义.md  Log4cxx日志框架.md  config配置.md  route_server.xmind  thirdparty.md  wireshark数据抓包[扩展].md  基本问题.md  涉及的基本问题.md  自定义功能添加.md  项目中涉及的C++语法问题.md  项目中涉及的基本问题.md  项目总结.md  (+1 more)
doc/xmind/: db_proxy_server​.xmind  msg_server.xmind
doc/业务逻与架构辑图/: .$IM即时通讯后台管理.drawio.bkp  .$IM即时通讯用户前台win.drawio.bkp  .$分布式架构.drawio.bkp  IM即时通讯后台管理.drawio  IM即时通讯用户前台win.drawio  分层架构.drawio  分布式架构.drawio  用户密码验证.drawio
doc/业务逻与架构辑图/类图与用例图/: .$2.base.drawio.bkp  1.template.drawio  2.base.drawio  6.login_server.drawio  即时通讯系统ER图.vsdx  用例图.mdj
pb/: IM.BaseDefine.proto  IM.Buddy.proto  IM.File.proto  IM.Group.proto  IM.Login.proto  IM.Message.proto  IM.Other.proto  IM.Server.proto  IM.SwitchService.proto  build.sh  create-2.6.sh  create.sh
server/run/msfs/: msfs
server/run/route_server/: route_server
server/src/: README.md  build.sh  build_ubuntu.sh  make_hiredis.sh  make_log4cxx.sh  make_mariadb.sh  make_protobuf.sh  sync_lib.sh  sync_lib_for_zip.sh
server/src/base/: Base64.cpp  Base64.h  BaseSocket.cpp  BaseSocket.h  Condition.cpp  Condition.h  ConfigFileReader.cpp  ConfigFileReader.h  EncDec.cpp  EncDec.h  EventDispatch.cpp  EventDispatch.h  HttpClient.cpp  HttpClient.h  HttpParserWrapper.cpp  HttpParserWrapper.h  ImPduBase.cpp  ImPduBase.h  Lock.cpp  Lock.h  ServInfo.cpp  ServInfo.h  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  TokenValidator.cpp  TokenValidator.h  UtilPdu.cpp  UtilPdu.h  atomic.h  http_parser.cpp  im_conn_util.cpp  im_conn_util.h  imconn.cpp  imconn.h  impdu.h  netlib.cpp  netlib.h  public_define.h  (+4 more)
server/src/db_proxy_server/: AutoPool.cpp  AutoPool.h  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  async.h  (+12 more)
src/: build_server.sh  build_ubuntu_ext.sh  build_ubunut.sh  make_hiredis.sh  make_log4cxx.sh  make_protobuf.sh
src/base/: Base64.cpp  Base64.h  BaseSocket.cpp  CMakeLists.txt  Condition.cpp  ConfigFileReader.h  HttpParserWrapper.h  ImPduBase.h  Lock.h  ServInfo.cpp  ServInfo.h  Task.h  Thread.h  ThreadPool.cpp  ThreadPool.h  TokenValidator.cpp  UtilPdu.h  imconn.cpp  imconn.h  ostype.h  public_define.h  singleton.h  util.cpp  util.h  version.h
src/base/common/: Base64.cpp  Base64.h  Condition.cpp  Condition.h  ConfigFileReader.cpp  ConfigFileReader.h  EncDec.cpp  EncDec.h  Lock.cpp  Lock.h  ServInfo.h  TokenValidator.h  atomic.h  ostype.h  public_define.h  util.cpp  util.h
src/base/http/: HttpClient.cpp  HttpClient.h  HttpParserWrapper.cpp  HttpParserWrapper.h  http_parser.cpp  http_parser.h
src/base/impdu/: ImPduBase.cpp  ImPduBase.h  UtilPdu.cpp  UtilPdu.h  im_conn_util.cpp  im_conn_util.h  imconn.cpp  imconn.h
src/base/lib/: readme.txt
src/base/netlib/: BaseSocket.h  EventDispatch.h
src/base/network/: BaseSocket.cpp  BaseSocket.h  EventDispatch.cpp  EventDispatch.h  netlib.cpp  netlib.h
src/base/security/: security.h
src/base/threadpool/: Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h
src/db_proxy_server/: AutoPool.cpp  AutoPool.h  CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  HandlerMap.h  ProxyConn.cpp  ProxyConn.h  ProxyTask.cpp  ProxyTask.h  SyncCenter.cpp  SyncCenter.h  db_proxy_server.cpp  dbproxyserver.conf  hiredis.h  read.h
src/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  Common.h  DepartAction.cpp  DepartAction.h  DepartModel.cpp  DepartModel.h  ExterLogin.h  FileAction.cpp  FileModel.cpp  FileModel.h  GroupAction.cpp  GroupAction.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  GroupModel.h  InterLogin.cpp  InterLogin.h  Login.cpp  Login.h  LoginStrategy.h  MessageContent.cpp  MessageContent.h  MessageCounter.cpp  MessageCounter.h  MessageModel.cpp  MessageModel.h  RecentSession.cpp  RecentSession.h  RelationModel.cpp  RelationModel.h  SessionModel.cpp  SessionModel.h  UserAction.cpp  UserAction.h  UserModel.cpp  UserModel.h
src/db_proxy_server/redis/: async.h  hiredis.h  read.h  sds.h
src/etcd_login_server/: HttpConn.cpp  HttpConn.h  LoginConn.cpp  LoginConn.h  ServerRegister.cpp  ServerRegister.h  etcd_login_server.cpp  ipparser.cpp  ipparser.h
src/file_server/: config_util.h  fileserver.conf  transfer_task.h
src/http_msg_server/: AttachData.h  DBServConn.cpp  DBServConn.h  HttpConn.h  http_msg_server.cpp
src/login_server/: HttpConn.cpp  HttpConn.h  ipparser.h  login_server.cpp  loginserver.conf
src/msfs/: FileLin.h  FileManager.cpp  main.cpp
src/msg_server/: FileHandler.h  FileServConn.cpp  LoginServConn.cpp  PushServConn.cpp  PushServConn.h  msgserver.conf
src/push_server/: pushserver.conf
src/route_server/: RouteConn.cpp  RouteConn.h  UserInfo.cpp  UserInfo.h  route_server.cpp
src/test/: Client.cpp  ClientConn.cpp  SeqAlloctor.cpp
src/test_db_proxy/: AutoPool.h  CachePool.cpp  DBPool.cpp  ProxyConn.cpp  ProxyTask.cpp  ProxyTask.h  SyncCenter.cpp  SyncCenter.h  db_proxy_server.cpp
src/third/slog/: CMakeLists.txt  log4cxx.properties  slog_api.cpp
src/third/slog/include/: slog_api.h
src/third/slog/lib/: readme.txt
src/tools/: daeml  makefile  monitor.sh  realease.txt  restart.sh  setup.sh  ttopen.sh
(+160 files in other folders)
