cmake_minimum_required(VERSION 2.6)
PROJECT(Base)

AUX_SOURCE_DIRECTORY(./jsoncpp SRC_LIST1)
AUX_SOURCE_DIRECTORY(./pb/protocol SRC_LIST2)
AUX_SOURCE_DIRECTORY(./http SRC_LIST3)
AUX_SOURCE_DIRECTORY(./impdu SRC_LIST4)
AUX_SOURCE_DIRECTORY(./common SRC_LIST5)
AUX_SOURCE_DIRECTORY(./netlib SRC_LIST6)
AUX_SOURCE_DIRECTORY(./threadpool SRC_LIST7)

if(APPLE)
    SET(PB_LIB_DIR ./pb/lib/mac)
elseif(UNIX)
    SET(PB_LIB_DIR ./pb/lib/linux)
endif()

SET(LIBRARY_OUTPUT_PATH ./)
#SET(EXECUTABLE_OUTPUT_PATH  ./bin)

ADD_DEFINITIONS(
    -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64
    -DAC_HAS_INFO -DAC_HAS_WARNING -DAC_HAS_ERROR
    -DAC_HAS_CRITICAL -DAC_HAS_DEBUG -DTIXML_USE_STL
    -DLINUX_DAEMON)

INCLUDE_DIRECTORIES(
    ./
    ../
    ./jsoncpp
    ./pb
    ./pb/protocol)

LINK_DIRECTORIES(
    ./
    ./slog/lib
    ${PB_LIB_DIR})

ADD_LIBRARY(base STATIC
    ${SRC_LIST1}
    ${SRC_LIST2}
    ${SRC_LIST3}
    ${SRC_LIST4}
    ${SRC_LIST5}
    ${SRC_LIST6}
    ${SRC_LIST7})

#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
#ADD_LIBRARY(${PROJECTNAME} SHARED ${SRC_LIST})
#ADD_EXECUTABLE(${PROJECTNAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(base pthread slog crypto)
